test/mutation_analysis/s0367_valid_perfect_square/hafis/ablation_o3_r50/mutants/6/result.txt
./test/mutation_analysis/s0367_valid_perfect_square/hafis/ablation_o3_r50/mutants/6/Solution.java:37: error: unreachable statement
        return false;
        ^
1 error
